# archive

./: .gitignore
dnsgraph/: .travis.yml  setup.py  test-requirements.txt
dnsgraph/dnsgraph/: cmd.py  stream.py
dnsgraph/dnsgraph/tests/: gen.py  test_performance.py  test_stream_handler.py
experiments/c_matrix_transpose/: Makefile  main  main.c
experiments/cpp_matrix_transpose/: Makefile  main  main.cpp
gitdiff/: all_csv.sh  fetch_repos.sh  fuel_repos.txt  lookup_fuel_repos.py
gitdiff/gitbranchdiff/: requirements.txt  setup.py
gitdiff/gitbranchdiff/gitbranchdiff/: cmd.py  config.py  git.py  parse.py
gitdiff/gitbranchdiffapp/: setup.py
minimal-os-provision-system/hiera/: README.md  hiera.yaml  provision.yaml
mydhclient/: CMakeLists.txt  README.md  mydhclient.c
mydhclient/scripts/: destroy_interfaces.sh  dhclient.conf  dhcpd.conf  dnsmasq.conf  prepare_interfaces.sh  run_dhclient.sh  run_dhcpd.sh  run_dnsmasq.sh  scriptrc
perport/: requirements.txt  setup.py
perport/perport/: app.py  index.py  objects.py  utils.py  views.py
perport/perport.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
perport/static/: fonts
share-books/: requirements.txt  run.py
share-books/share_books/: app.py  errors.py  settings.py  utils.py
virtlab/: setup.cfg  tox.ini
virtlab/virtlab/: manager.py
virtlab/virtlab/cmd/: cmd.py
virtlab/virtlab/drivers/: __init__.py  common_driver.py  libvirt_driver.py  pygit2_driver.py
virtlab/virtlab/objects/: artifact.py  dhcp.py  environment.py  http.py  net.py  repo.py  ssh.py  tftp.py  vm.py
(+41 files in other folders)
