[metadata]
name = virtlab
version = 0.0.1
author = Vladimir Kozhukalov
author-email = kozhukalov@gmail.com
summary = Virtual Lab
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python

[files]
packages =
    virtlab

[entry_points]
console_scripts =
    virtlab = virtlab.cmd.cmd:main

[pbr]
autodoc_index_modules = True
# this variable is needed to avoid including files
# from other subprojects in this repository
skip_git_sdist = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
